Fix image alignment in rich editor

--- a/src/components/richEditor/index.less
+++ b/src/components/richEditor/index.less
@@ -5,6 +5,9 @@
     * {
       text-align: left;
     }
+    .rdw-image-center {
+      justify-content: flex-start;
+    }
   }
 
   .alignC {
